changes to MissionPlanner